Fixed social icon width bug on mobile

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -231,6 +231,6 @@ a {
   }
 
   .socialLink {
-    width: 30%;
+    width: 25%;
   }
 }
